# Belewitte

./: .hgignore  .neomake_cpp_config  .syntastic_cpp_config  .zenodo.json  Algorithm.cpp  Algorithm.hpp  AlgorithmConfig.cpp  AlgorithmConfig.hpp  Backend.cpp  Backend.hpp  CITATION.cff  CUDA.cpp  CUDA.hpp  Cabal.mk  Client.hs  Common.mk  Config.mk  Connectivity.cpp  Connectivity.hpp  Genetic.hs  Graph.hpp  GraphFile.cpp  GraphFile.hpp  GraphLoader.hpp  GraphLoading.hpp  GraphRep.hpp  ImplementationBase.cpp  ImplementationBase.hpp  ImplementationTemplate.hpp  Interface.hpp  KernelLib.mk  Makefile  OpenCL.cpp  OpenCL.hpp  Options.cpp  Options.hpp  README.rst  README.sh  Rules.mk  Server.hs  (+46 more)
benchmark-analysis/: ExportModel.hs  Ingest  Ingest.hs  Makefile  Model.hs  benchmark-analysis.cabal  cabal.project  graph-details.cpp  model.py
benchmark-analysis/cbits/: check_unique.c  count_transitions.c  key_value_vector.c  min_key.c  misc.c  random_fun.c  random_sample.c  sqlite-functions.c  sqlite-functions.h
benchmark-analysis/ffi-core/: Exceptions.hs  Pretty.hs  SQLiteExts.hs
benchmark-analysis/ingest-src/: Ingest.hs  JobPool.hs  Jobs.hs  Main.hs  MissingQuery.hs  Parsers.hs  ProcessPool.hs
benchmark-analysis/ingest-src/Commands/: Add.hs  Import.hs  List.hs  Query.hs  Reset.hs  Set.hs  Unset.hs
benchmark-analysis/ingest-src/Query/: Missing.hs
benchmark-analysis/model-src/: Analyse.hs  Evaluate.hs  ExportModel.hs  Main.hs  ModelOptions.hs  Options.hs  PredictorResults.hs  QueryDump.hs  StepQuery.hs  Train.hs  Validate.hs
benchmark-analysis/model-src/Query/: Dump.hs
benchmark-analysis/plot-src/: BarPlot.hs  GlobalPlotOptions.hs  Heatmap.hs  Interesting.hs  LevelQuery.hs  Main.hs  Plot.hs  PlotOptions.hs  PlotQuery.hs  QueryDump.hs  StepHeatmapQuery.hs  StepQuery.hs  TimeQuery.hs
benchmark-analysis/plot-src/Query/: Dump.hs  Level.hs  StepHeatmap.hs  Time.hs
benchmark-analysis/runtime-data/: cxx-run.sh  kernel-runner  kernels  numdiff.awk  requirements.txt  virtualenv
benchmark-analysis/runtime-data/scripts/: bar-plot.py  heatmap.py  model.py
benchmark-analysis/scripts/: bar-plot.py
benchmark-analysis/src/: Commands.hs  Core.hs  Exceptions.hs  FieldQuery.hs  FormattedOutput.hs  ImplType.hs  InteractiveInput.hs  Migration.hs  Model.hs  OptionParsers.hs  Options.hs  Predictor.hs  ProcessUtils.hs  Query.hs  RuntimeData.hs  SQLiteExts.hs  Schema.hs  Sql.hs  StepAggregate.hs  StepQuery.hs  TrainConfig.hs  TrainQuery.hs  Types.hs  Utils.hs  VariantQuery.hs  VectorUtils.hs  schema
benchmark-analysis/src/Commands/: Debug.hs
benchmark-analysis/src/Exceptions/: Class.hs
benchmark-analysis/src/Model/: Stats.hs
benchmark-analysis/src/Predictor/: Config.hs  Raw.hs
benchmark-analysis/src/Pretty/: Columns.hs  Fields.hs  List.hs
benchmark-analysis/src/Pretty/Fields/: Persistent.hs  Record.hs
benchmark-analysis/src/Query/: Field.hs  ImplRank.hs  Step.hs  Train.hs  Variant.hs
benchmark-analysis/src/Schema/: Algorithm.hs  Dataset.hs  External.hs  GlobalVars.hs  Graph.hs  Implementation.hs  Import.hs  Indices.hs  Model.hs  ModelMetadata.hs  Platform.hs  Properties.hs  Run.hs  RunConfig.hs  Timers.hs  UnknownPredictions.hs  Utils.hs  Variant.hs  VariantConfig.hs  Version.hs
benchmark-analysis/src/Schema/Graph/: V0.hs  V1.hs  V2.hs
benchmark-analysis/src/Schema/Implementation/: V0.hs
benchmark-analysis/src/Schema/Model/: V0.hs  V1.hs  V2.hs  V3.hs  V4.hs  V5.hs  V6.hs
benchmark-analysis/src/Schema/ModelMetadata/: V0.hs  V1.hs  V2.hs
benchmark-analysis/src/Schema/Platform/: V0.hs  V1.hs  V2.hs
benchmark-analysis/src/Schema/Properties/: V0.hs  V1.hs
benchmark-analysis/src/Schema/Run/: V0.hs
benchmark-analysis/src/Schema/RunConfig/: V0.hs
benchmark-analysis/src/Schema/Timers/: V0.hs  V1.hs  V2.hs
benchmark-analysis/src/Schema/UnknownPredictions/: V0.hs  V1.hs  V2.hs
benchmark-analysis/src/Schema/Utils/: TH.hs
benchmark-analysis/src/Schema/Variant/: V0.hs  V1.hs  V2.hs
benchmark-analysis/src/Schema/VariantConfig/: V0.hs  V1.hs
benchmark-analysis/src/Sql/: Core.hs  Import.hs  Transaction.hs  WrappedPersistent.hs
benchmark-analysis/src/Sql/Core/: PersistCompat.hs
benchmark-analysis/src/Utils/: Conduit.hs  ImplTiming.hs  Pair.hs  Process.hs  PropValue.hs  Vector.hs
bfs/: Makefile  bfs.cpp  bfs.cu  bfs.h  bfs.hpp  edgelist.cu  rev-edgelist.cu  rev_edgelist.cu  rev_struct_edgelist.cu  struct_edgelist.cu  template_warp_pull.cu  template_warp_push.cu  vertex_pull.cu  vertex_pull_warp.cu  vertex_push.cu  vertex_push_warp.cu
evolve/: Client.hs  Connectivity.cpp  Connectivity.hpp  Makefile  Server.hs  WeightedShuffle.hs  cabal.project  evolution.cabal  evolve.cpp  gen-graph.cpp
evolve/src/: Process.hs
makefiles/: Boost.mk  Cabal.mk  Common.mk  Haskell.mk  KernelLib.mk  Rules.mk  SubDir.mk  cabal.project.default  cabal.project.ghc-8.10.freeze  cabal.project.ghc-9.0.freeze  cabal.project.ghc-9.2.freeze  cabal.project.ghc-9.4.freeze  cabal.project.ghc-9.6  cabal.project.ghc-9.6.freeze
options/: Makefile  Options.cpp  Options.hpp
pagerank/: edgelist.cu  pagerank.cpp  pagerank.cu  pagerank.h  pagerank.hpp  rev_edgelist.cu  rev_struct_edgelist.cu  struct_edgelist.cu  template_warp_pull.cu  template_warp_pull_nodiv.cu  template_warp_push.cu  vertex_pull.cu  vertex_pull_nodiv.cu  vertex_pull_warp.cu  vertex_pull_warp_nodiv.cu  vertex_push.cu  vertex_push_warp.cu
plotting/: Makefile  Plot.hs  PlotGraph  cabal.project  graph-edges.cpp  plotting.cabal
process-tools/: Makefile  ProcessTools.hs  process-tools.cabal
process-tools/ProcessTools/: Pool.hs
src/: Process.hs
suppressions/: leak.supp  thread.supp
utils/: Graph.hpp  Makefile  StatisticalSummary.hpp  Util.cpp  Util.hpp  cuda_utils.hpp
