Name:                evolution
Version:             0.1.0

Homepage:            
Bug-Reports:         

Author:              Merijn Verstraaten
Maintainer:          Merijn Verstraaten <merijn@inconsistent.nl>
Copyright:           Copyright © 2015 Merijn Verstraaten

License:             GPL-3
License-File:        LICENSE

Category:            System
Cabal-Version:       >= 1.10
Build-Type:          Simple
Tested-With:         GHC == 7.10

Synopsis:            

Description:

Executable darwin
  Default-Language:     Haskell2010
  GHC-Options:          -O2 -Wall -fno-warn-unused-do-bind -threaded
                        -fno-warn-unticked-promoted-constructors
  Main-Is:              Server.hs
  Other-Modules:        Server

  Build-Depends:        base
               ,        async == 2.0.2.*
               ,        containers
               ,        directory
               ,        evolution
               ,        exceptions == 0.8.0.2.*
               ,        foldl == 1.2.0.*
               ,        mtl == 2.2.1.*
               ,        mwc-random == 0.13.3.2.*
               ,        optparse-applicative == 0.12.1.0.*
               ,        pipes == 4.1.8.*
               ,        profunctors == 5.2.*
               ,        random-extras == 0.19.*
               ,        random-fu == 0.2.6.2.*
               ,        process == 1.4.1.*
               ,        temporary == 1.2.0.*
               ,        text == 1.2.1.3.*
               ,        transformers == 0.4.2.*

Executable breeding-pool
  Default-Language:     Haskell2010
  GHC-Options:          -O2 -Wall -fno-warn-unused-do-bind -threaded
                        -fno-warn-unticked-promoted-constructors
  Main-Is:              Client.hs
  Other-Modules:        Client

  Build-Depends:        base
               ,        bytestring == 0.10.6.*
               ,        broadcast-chan == 0.1.0.*
               ,        containers
               ,        directory
               ,        evolution
               ,        exceptions == 0.8.0.2.*
               ,        managed == 1.0.2.*
               ,        mtl == 2.2.1.*
               ,        network == 2.6.2.1.*
               ,        optparse-applicative == 0.12.1.0.*
               ,        pipes == 4.1.8.*
               ,        process == 1.4.1.*
               ,        temporary == 1.2.0.*
               ,        text == 1.2.1.3.*
               ,        transformers == 0.4.2.*
               ,        unix == 2.7.1.*

Library
  Default-Language:     Haskell2010
  GHC-Options:          -Wall -fno-warn-unused-do-bind
                        -fno-warn-unticked-promoted-constructors
  GHC-Prof-Options:     -auto-all -caf-all -rtsopts
  Default-Extensions:   
  Hs-Source-Dirs:       src
  Exposed-Modules:      Process
  Other-Modules:        

  Build-Depends:        base
               ,        binary == 0.7.5.*
               ,        bytestring == 0.10.6.*
               ,        containers == 0.5.6.2.*
               ,        exceptions == 0.8.0.2.*
               ,        mtl == 2.2.1.*
               ,        network == 2.6.2.1.*
               ,        pipes == 4.1.8.*
               ,        pipes-binary == 0.4.0.5.*
               ,        pipes-concurrency == 2.0.4.*
               ,        pipes-parse == 3.0.4.*
               ,        pipes-safe == 2.2.3.*
               ,        process == 1.4.1.*
               ,        stm == 2.4.4.1.*
               ,        text == 1.2.1.3.*


Source-Repository head
  Type:     git
  Location: git+ssh://github.com:merijn/GPU-benchmarks
