Cabal-Version:       2.2
Name:                benchmark-analysis
Version:             0.1.0

Homepage:            
Bug-Reports:         

Author:              Merijn Verstraaten
Maintainer:          Merijn Verstraaten <merijn@inconsistent.nl>
Copyright:           Copyright © 2017-2019 Merijn Verstraaten

License:             GPL-3.0-or-later
License-File:        LICENSE

Category:            System
Build-Type:          Simple
Tested-With:         GHC == 8.6

Synopsis:            

Description:

Data-Files:             runtime-data/kernel-runner
                        runtime-data/kernels
                        runtime-data/requirements.txt
                        runtime-data/scripts/model.py
                        runtime-data/scripts/bar-plot.py
                        runtime-data/virtualenv

Extra-Source-Files:     cbits/*.h src/schema

Common all
  Default-Language:     Haskell2010
  GHC-Options:          -O2 -Wall -fno-warn-unused-do-bind
  GHC-Prof-Options:     -fprof-auto
  Other-Extensions:     LambdaCase
                        MonadFailDesugaring
                        NamedFieldPuns
                        OverloadedStrings
                        QuasiQuotes
                        RecordWildCards
                        TupleSections
                        ViewPatterns

  Build-Depends:        base
               ,        conduit ^>= 1.3.1.1
               ,        conduit-extra ^>= 1.3.4
               ,        containers >= 0.5.11 && < 0.7
               ,        exceptions ^>= 0.10.0
               ,        interpolate ^>= 0.2.0
               ,        monad-logger ^>= 0.3.28
               ,        mtl ^>= 2.2.1
               ,        optparse-applicative ^>= 0.15
               ,        resourcet ^>= 1.2.0
               ,        text
               ,        time ^>= 1.9
               ,        unix ^>= 2.7.0

Common exes
  GHC-Options:          -rtsopts -threaded -with-rtsopts=-qg

Library
  Import:               all
  Hs-Source-Dirs:       src
  Exposed-Modules:      Core
                        Exceptions
                        FormattedOutput
                        InteractiveInput
                        Migration
                        Model
                        OptionParsers
                        Pretty
                        Pretty.Columns
                        Query
                        RuntimeData
                        Schema
                        Schema.Algorithm
                        Schema.Dataset
                        Schema.External
                        Schema.External.V0
                        Schema.GlobalVars
                        Schema.Graph
                        Schema.Graph.V0
                        Schema.Implementation
                        Schema.Indices
                        Schema.Model
                        Schema.Model.V0
                        Schema.Model.V1
                        Schema.ModelMetadata
                        Schema.Platform
                        Schema.Platform.V0
                        Schema.Properties
                        Schema.Run
                        Schema.Run.V0
                        Schema.RunConfig
                        Schema.Timers
                        Schema.Timers.V0
                        Schema.UnknownPredictions
                        Schema.UnknownPredictions.V0
                        Schema.Utils
                        Schema.Variant
                        Schema.Variant.V0
                        Schema.Variant.V1
                        Schema.VariantConfig
                        Sql
                        Sql.Core
                        SQLiteExts
                        Types
                        Utils.Pair
                        Utils.Process
                        Utils.Vector

  Autogen-Modules:      Paths_benchmark_analysis
  Other-Modules:        Paths_benchmark_analysis

  C-Sources:            cbits/sqlite-functions.c
  CC-Options:           -Wall -Wextra -pedantic -std=c11 -g
  Include-Dirs:         cbits
  Includes:             sqlite-functions.h

  Other-Extensions:     BangPatterns
                        CApiFFI
                        ConstraintKinds
                        DeriveFunctor
                        DeriveGeneric
                        FlexibleContexts
                        FlexibleInstances
                        GADTs
                        GADTSyntax
                        GeneralizedNewtypeDeriving
                        MagicHash
                        MultiParamTypeClasses
                        PatternSynonyms
                        RankNTypes
                        ScopedTypeVariables
                        TemplateHaskell
                        TypeFamilies
                        UndecidableInstances

  Build-Depends:        bytestring
               ,        binary ^>= 0.8.7
               ,        clock ^>= 0.8
               ,        cryptonite ^>= 0.26
               ,        data-interval ^>= 1.3.0
               ,        directory ^>= 1.3.4.0
               ,        filepath ^>= 1.4.0
               ,        haskeline ^>= 0.7.4.2
               ,        megaparsec ^>= 7.0.0
               ,        microlens ^>= 0.4.8
               ,        persistent ^>= 2.10.0
               ,        persistent-template ^>= 2.7.2
               ,        persistent-sqlite ^>= 2.10.4
               ,        prettyprinter ^>= 1.2.0
               ,        prettyprinter-ansi-terminal ^>= 1.1.1
               ,        process ^>= 1.6.0
               ,        streaming-commons ^>= 0.2.1
               ,        terminal-size ^>= 0.3.2.1
               ,        transformers
               ,        unliftio-core ^>= 0.1.1
               ,        vector ^>= 0.12.0.1

Executable Ingest
  Import:               all, exes
  Hs-Source-Dirs:       ingest-src
  Main-Is:              Main.hs
  Other-Modules:        Commands.Add
                        Commands.List
                        Commands.Reset
                        Commands.Set
                        Commands.Unset
                        Jobs
                        MissingQuery
                        Parsers
                        ProcessPool

  Other-Extensions:     DeriveFoldable
                        DeriveFunctor
                        DeriveTraversable
                        ScopedTypeVariables
                        TypeFamilies

  Build-Depends:        benchmark-analysis
               ,        broadcast-chan-conduit ^>= 0.2.0
               ,        attoparsec ^>= 0.13.1
               ,        cryptonite-conduit ^>= 0.2.0
               ,        directory ^>= 1.3.4.0
               ,        filepath ^>= 1.4.0
               ,        hostname ^>= 1.0
               ,        memory ^>= 0.14
               ,        process ^>= 1.6.0
               ,        resource-pool ^>= 0.2.3.2
               ,        stm ^>= 2.5.0
               ,        transformers

Executable Model
  Import:               all, exes
  Hs-Source-Dirs:       model-src
  Main-Is:              Main.hs
  Other-Modules:        Evaluate
                        Options
                        Train
                        Validate
                        StepQuery

  Other-Extensions:     BangPatterns
                        DeriveFunctor
                        FlexibleContexts
                        ScopedTypeVariables
                        TypeFamilies

  Build-Depends:        benchmark-analysis
               ,        binary ^>= 0.8.7
               ,        binary-conduit ^>= 1.3
               ,        bytestring
               ,        data-interval ^>= 1.3.0
               ,        megaparsec ^>= 7.0.0
               ,        vector ^>= 0.12.0.1

Executable Plot
  Import:               all, exes
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       plot-src
  Main-Is:              Plot.hs
  Other-Modules:        PlotQuery

  Other-Extensions:     ApplicativeDo
                        BangPatterns
                        FlexibleContexts

  Build-Depends:        benchmark-analysis
               ,        split ^>= 0.2.0
               ,        vector ^>= 0.12.0.1

Source-Repository head
  Type:     git
  Location: git+ssh://github.com:merijn/GPU-benchmarks
