Cabal-Version:       2.2
Name:                benchmark-analysis
Version:             0.9.0

Homepage:            
Bug-Reports:         

Author:              Merijn Verstraaten
Maintainer:          Merijn Verstraaten <merijn@inconsistent.nl>
Copyright:           Copyright © 2017-2020 Merijn Verstraaten

License:             GPL-3.0-or-later
License-File:        LICENSE

Category:            System
Build-Type:          Simple
Tested-With:         GHC == 8.10

Synopsis:            

Description:

Data-Files:             runtime-data/kernel-runner
                        runtime-data/kernels
                        runtime-data/numdiff.awk
                        runtime-data/requirements.txt
                        runtime-data/scripts/model.py
                        runtime-data/scripts/bar-plot.py
                        runtime-data/scripts/heatmap.py
                        runtime-data/virtualenv

Extra-Source-Files:     cbits/*.h

Common all
  Default-Language:     Haskell2010
  GHC-Options:          -O2 -Wall -fno-warn-unused-do-bind
  GHC-Prof-Options:     -fprof-auto
  Other-Extensions:     ApplicativeDo
                        LambdaCase
                        NamedFieldPuns
                        OverloadedStrings
                        QuasiQuotes
                        RecordWildCards
                        TupleSections
                        ViewPatterns

  Build-Depends:        base
               ,        process-tools
               ,        bytestring ^>= 0.10.8
               ,        conduit ^>= 1.3.1.1
               ,        conduit-extra ^>= 1.3.4
               ,        containers >= 0.5.11 && < 0.7
               ,        exceptions ^>= 0.10.0
               ,        interpolate ^>= 0.2.0
               ,        monad-logger ^>= 0.3.28
               ,        mtl ^>= 2.2.1
               ,        optparse-applicative ^>= 0.17
               ,        pretty-show ^>= 1.10
               ,        resourcet ^>= 1.2.0
               ,        text ^>= 1.2.3.2
               ,        time ^>= 1.9
               ,        unix ^>= 2.7.0

Common exes
  GHC-Options:          -rtsopts -threaded -with-rtsopts=-qg
  GHC-Prof-Options:     "-with-rtsopts=-qg -p -l-au"

Library
  Import:               all
  Hs-Source-Dirs:       src
  Exposed-Modules:      Core
                        FormattedOutput
                        InteractiveInput
                        Model.Stats
                        Options
                        Predictor
                        Pretty.Fields
                        Pretty.Fields.Persistent
                        Pretty.Fields.Record
                        Pretty.List
                        Query
                        Query.Field
                        Query.Step
                        Query.ImplRank
                        Query.Train
                        Query.Variant
                        RuntimeData
                        Schema
                        Sql
                        Sql.Import
                        Sql.Transaction
                        StepAggregate
                        TrainConfig
                        Utils.Conduit
                        Utils.ImplTiming
                        Utils.Pair
                        Utils.PropValue
                        Utils.Vector

  Autogen-Modules:      Paths_benchmark_analysis
  Other-Modules:        Commands
                        Commands.Debug
                        Exceptions
                        Exceptions.Class
                        Migration
                        Model
                        OptionParsers
                        Paths_benchmark_analysis
                        Predictor.Config
                        Predictor.Raw
                        Pretty
                        Schema.Algorithm
                        Schema.Dataset
                        Schema.External
                        Schema.External.V0
                        Schema.GlobalVars
                        Schema.Graph
                        Schema.Graph.V0
                        Schema.Graph.V1
                        Schema.Implementation
                        Schema.Implementation.V0
                        Schema.Import
                        Schema.Indices
                        Schema.Model
                        Schema.Model.V0
                        Schema.Model.V1
                        Schema.Model.V2
                        Schema.Model.V3
                        Schema.Model.V4
                        Schema.Model.V5
                        Schema.Model.V6
                        Schema.ModelMetadata
                        Schema.ModelMetadata.V0
                        Schema.ModelMetadata.V1
                        Schema.ModelMetadata.V2
                        Schema.Platform
                        Schema.Platform.V0
                        Schema.Platform.V1
                        Schema.Platform.V2
                        Schema.Properties
                        Schema.Properties.V0
                        Schema.Properties.V1
                        Schema.Run
                        Schema.Run.V0
                        Schema.RunConfig
                        Schema.RunConfig.V0
                        Schema.Timers
                        Schema.Timers.V0
                        Schema.Timers.V1
                        Schema.Timers.V2
                        Schema.UnknownPredictions
                        Schema.UnknownPredictions.V0
                        Schema.UnknownPredictions.V1
                        Schema.UnknownPredictions.V2
                        Schema.Utils
                        Schema.Utils.TH
                        Schema.Variant
                        Schema.Variant.V0
                        Schema.Variant.V1
                        Schema.Variant.V2
                        Schema.VariantConfig
                        Schema.VariantConfig.V0
                        Schema.VariantConfig.V1
                        Schema.Version
                        Sql.Core
                        Sql.Core.PersistCompat
                        SQLiteExts
                        Types

  C-Sources:            cbits/check_unique.c
                        cbits/count_transitions.c
                        cbits/key_value_vector.c
                        cbits/min_key.c
                        cbits/misc.c
                        cbits/pcg_basic.c
                        cbits/random_sample.c
                        cbits/random_fun.c

  CC-Options:           -Wall -Wextra -pedantic -std=c11 -g -O3 -DSQLITE_CORE
  Include-Dirs:         cbits
  Includes:             sqlite-functions.h

  Other-Extensions:     BangPatterns
                        CApiFFI
                        CPP
                        ConstraintKinds
                        DefaultSignatures
                        DeriveFunctor
                        DeriveGeneric
                        DeriveLift
                        DerivingStrategies
                        FlexibleContexts
                        FlexibleInstances
                        GADTs
                        GADTSyntax
                        GeneralizedNewtypeDeriving
                        MagicHash
                        MultiParamTypeClasses
                        PatternSynonyms
                        Rank2Types
                        RankNTypes
                        ScopedTypeVariables
                        StandaloneDeriving
                        TemplateHaskell
                        TypeFamilies
                        TypeSynonymInstances
                        UndecidableInstances

  Build-Depends:        attoparsec ^>= 0.13.1
               ,        base64 ^>= 0.4.1
               ,        binary ^>= 0.8.7
               ,        clock ^>= 0.8
               ,        cryptonite ^>= 0.26
               ,        cryptonite-conduit ^>= 0.2.0
               ,        data-interval ^>= 1.3.0
               ,        directory ^>= 1.3.4.0
               ,        fast-logger ^>= 3.0.0
               ,        filepath ^>= 1.4.0
               ,        format-numbers ^>= 0.1.0.1
               ,        haskeline ^>= 0.8.1.0
               ,        megaparsec ^>= 7.0.0
               ,        memory ^>= 0.15
               ,        microlens ^>= 0.4.8
               ,        persistent ^>= 2.11.0.2
               ,        persistent-template ^>= 2.9.1.0
               ,        persistent-sqlite ^>= 2.11.1.0
               ,        prettyprinter ^>= 1.6.0
               ,        prettyprinter-ansi-terminal ^>= 1.1.1
               ,        resource-pool ^>= 0.2.3.2
               ,        template-haskell ^>= 2.16.0.0
               ,        terminal-size ^>= 0.3.2.1
               ,        transformers
               ,        unliftio-core ^>= 0.2.0.1
               ,        validated-literals ^>= 0.3.0
               ,        vector ^>= 0.12.2.0
               ,        vector-algorithms ^>= 0.8.0.3

Executable Ingest
  Import:               all, exes
  Hs-Source-Dirs:       ingest-src
  Main-Is:              Main.hs
  Other-Modules:        Commands.Add
                        Commands.Import
                        Commands.List
                        Commands.Query
                        Commands.Reset
                        Commands.Set
                        Commands.Unset
                        Jobs
                        JobPool
                        Parsers
                        Query.Missing

  Other-Extensions:     DeriveFoldable
                        DeriveFunctor
                        DeriveTraversable
                        ScopedTypeVariables
                        TypeFamilies

  Build-Depends:        benchmark-analysis
               ,        broadcast-chan-conduit ^>= 0.2.1
               ,        attoparsec ^>= 0.13.1
               ,        cryptonite-conduit ^>= 0.2.0
               ,        directory ^>= 1.3.4.0
               ,        filepath ^>= 1.4.0
               ,        hostname ^>= 1.0
               ,        memory ^>= 0.15
               ,        process ^>= 1.6.0
               ,        resource-pool ^>= 0.2.3.2
               ,        stm ^>= 2.5.0
               ,        transformers

Executable Model
  Import:               all, exes
  Hs-Source-Dirs:       model-src
  Main-Is:              Main.hs
  Other-Modules:        Evaluate
                        ModelOptions
                        PredictorResults
                        Train
                        Validate
                        Query.Dump

  Other-Extensions:     BangPatterns
                        DeriveFunctor
                        FlexibleContexts
                        ScopedTypeVariables
                        TypeFamilies

  Build-Depends:        benchmark-analysis
               ,        binary ^>= 0.8.7
               ,        binary-conduit ^>= 1.3
               ,        data-interval ^>= 1.3.0
               ,        megaparsec ^>= 7.0.0
               ,        validated-literals ^>= 0.3.0
               ,        vector ^>= 0.12.2.0
               ,        vector-algorithms ^>= 0.8.0.3

Executable Plot
  Import:               all, exes
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       plot-src
  Main-Is:              Main.hs
  Other-Modules:        BarPlot
                        GlobalPlotOptions
                        Heatmap
                        Interesting
                        PlotOptions
                        Query.Dump
                        Query.Level
                        Query.StepHeatmap
                        Query.Time

  Other-Extensions:     BangPatterns
                        DeriveFoldable
                        DeriveGeneric
                        DerivingVia
                        FlexibleContexts

  Build-Depends:        benchmark-analysis
               ,        binary ^>= 0.8.7
               ,        data-interval ^>= 1.3.0
               ,        semigroups ^>= 0.19.1
               ,        statistics ^>= 0.15.2.0
               ,        vector ^>= 0.12.2.0

Source-Repository head
  Type:     git
  Location: git+ssh://github.com:merijn/Belewitte
