Cabal-Version:       3.0
Name:                benchmark-analysis
Version:             0.9.0

Homepage:            
Bug-Reports:         

Author:              Merijn Verstraaten
Maintainer:          Merijn Verstraaten <merijn@inconsistent.nl>
Copyright:           Copyright © 2017-2020 Merijn Verstraaten

License:             GPL-3.0-or-later
License-File:        LICENSE

Category:            System
Build-Type:          Simple
Tested-With:         GHC == 8.10.7, GHC == 9.0.2, GHC == 9.2.7, GHC == 9.4.5

Synopsis:            

Description:

Data-Files:             runtime-data/kernel-runner
                        runtime-data/kernels
                        runtime-data/numdiff.awk
                        runtime-data/requirements.txt
                        runtime-data/scripts/model.py
                        runtime-data/scripts/bar-plot.py
                        runtime-data/scripts/heatmap.py
                        runtime-data/virtualenv

Extra-Source-Files:     cbits/*.h

Common compile-flags
  Default-Language:     Haskell2010
  GHC-Options:          -O2 -Wall -fno-warn-unused-do-bind
  GHC-Prof-Options:     -fprof-auto
  Other-Extensions:     ApplicativeDo
                        LambdaCase
                        NamedFieldPuns
                        OverloadedStrings
                        QuasiQuotes
                        RecordWildCards
                        TupleSections
                        ViewPatterns

  Build-Depends:        base
               ,        bytestring ^>= 0.11.4.0
               ,        exceptions ^>= 0.10.7
               ,        monad-logger ^>= 0.3.39
               ,        text ^>= 2.0.2

Common all
  Import:               compile-flags

  Build-Depends:        process-tools
               ,        conduit ^>= 1.3.4.3
               ,        conduit-extra ^>= 1.3.6
               ,        containers ^>= 0.6.6
               ,        interpolate ^>= 0.2.1
               ,        optparse-applicative ^>= 0.17
               ,        pretty-show ^>= 1.10
               --       resourcet 1.3.0 is not supported by broadcast-chan
               ,        resourcet ^>= 1.2.0
               ,        time ^>= 1.12.2
               ,        unix ^>= 2.8.1.1

  -- mtl 2.3.1 is broken on GHC 9.0 and thus never valid
  if impl(ghc == 9.0.*)
    Build-Depends:      mtl ^>= 2.2.2
  else
    Build-Depends:      mtl ^>= 2.3.1

Common exes
  GHC-Options:          -rtsopts -threaded -with-rtsopts=-qg
  GHC-Prof-Options:     "-with-rtsopts=-qg -p -l-au"
  Build-Depends:        ffi-core

Library ffi-core
  Import:               compile-flags
  Hs-Source-Dirs:       ffi-core
  Exposed-Modules:      Exceptions
                        Exceptions.Class
                        Pretty
                        SQLiteExts

  Other-Extensions:     CApiFFI
                        ExistentialQuantification
                        FlexibleContexts
                        GADTs
                        GADTSyntax
                        StandaloneDeriving

  C-Sources:            cbits/check_unique.c
                        cbits/count_transitions.c
                        cbits/key_value_vector.c
                        cbits/min_key.c
                        cbits/misc.c
                        cbits/pcg_basic.c
                        cbits/random_sample.c
                        cbits/random_fun.c

  CC-Options:           -Wall -Wextra -pedantic -std=c11 -g -O3 -DSQLITE_CORE
  Include-Dirs:         cbits
  Includes:             sqlite-functions.h

  Build-Depends:        persistent ^>= 2.14.4
               ,        persistent-sqlite ^>= 2.13.1
               ,        prettyprinter ^>= 1.7.1
               ,        prettyprinter-ansi-terminal ^>= 1.1.3

Library
  Import:               all
  Hs-Source-Dirs:       src
  Exposed-Modules:      Core
                        FormattedOutput
                        InteractiveInput
                        Model.Stats
                        Options
                        Predictor
                        Pretty.Fields
                        Pretty.Fields.Persistent
                        Pretty.Fields.Record
                        Pretty.List
                        Query
                        Query.Field
                        Query.Step
                        Query.ImplRank
                        Query.Train
                        Query.Variant
                        RuntimeData
                        Schema
                        Sql
                        Sql.Import
                        Sql.Transaction
                        StepAggregate
                        TrainConfig
                        Utils.Conduit
                        Utils.ImplTiming
                        Utils.Pair
                        Utils.PropValue
                        Utils.Vector

  Autogen-Modules:      Paths_benchmark_analysis
  Other-Modules:        Commands
                        Commands.Debug
                        Migration
                        Model
                        OptionParsers
                        Paths_benchmark_analysis
                        Predictor.Config
                        Predictor.Raw
                        Schema.Algorithm
                        Schema.Dataset
                        Schema.External
                        Schema.External.V0
                        Schema.GlobalVars
                        Schema.Graph
                        Schema.Graph.V0
                        Schema.Graph.V1
                        Schema.Graph.V2
                        Schema.Implementation
                        Schema.Implementation.V0
                        Schema.Import
                        Schema.Indices
                        Schema.Model
                        Schema.Model.V0
                        Schema.Model.V1
                        Schema.Model.V2
                        Schema.Model.V3
                        Schema.Model.V4
                        Schema.Model.V5
                        Schema.Model.V6
                        Schema.ModelMetadata
                        Schema.ModelMetadata.V0
                        Schema.ModelMetadata.V1
                        Schema.ModelMetadata.V2
                        Schema.Platform
                        Schema.Platform.V0
                        Schema.Platform.V1
                        Schema.Platform.V2
                        Schema.Properties
                        Schema.Properties.V0
                        Schema.Properties.V1
                        Schema.Run
                        Schema.Run.V0
                        Schema.RunConfig
                        Schema.RunConfig.V0
                        Schema.Timers
                        Schema.Timers.V0
                        Schema.Timers.V1
                        Schema.Timers.V2
                        Schema.UnknownPredictions
                        Schema.UnknownPredictions.V0
                        Schema.UnknownPredictions.V1
                        Schema.UnknownPredictions.V2
                        Schema.Utils
                        Schema.Variant
                        Schema.Variant.V0
                        Schema.Variant.V1
                        Schema.Variant.V2
                        Schema.VariantConfig
                        Schema.VariantConfig.V0
                        Schema.VariantConfig.V1
                        Schema.Version
                        Sql.Core
                        Sql.Core.PersistCompat
                        Types

  Other-Extensions:     BangPatterns
                        CPP
                        ConstraintKinds
                        DefaultSignatures
                        DeriveFunctor
                        DeriveGeneric
                        DeriveLift
                        DerivingStrategies
                        FlexibleContexts
                        FlexibleInstances
                        GADTs
                        GeneralizedNewtypeDeriving
                        MagicHash
                        MultiParamTypeClasses
                        PatternSynonyms
                        Rank2Types
                        RankNTypes
                        ScopedTypeVariables
                        StandaloneDeriving
                        TemplateHaskell
                        TypeFamilies
                        TypeSynonymInstances
                        UndecidableInstances

  Build-Depends:        ffi-core
               ,        attoparsec ^>= 0.14.4
               ,        base64 ^>= 0.4.2.4
               ,        binary ^>= 0.8.9.1
               ,        clock ^>= 0.8.3
               ,        cryptonite ^>= 0.30
               ,        cryptonite-conduit ^>= 0.2.2
               ,        data-interval ^>= 2.1.1
               --       deepseq 1.4.4.0 ships with GHC 8.10 and is required for
               --       template-haskell 2.16.0.0
               --
               --       deepseq 1.4.6.0 ships with GHC 9.2 and is required for
               --       template-haskell 2.18.0.0
               ,        deepseq ^>= 1.4.4.0
               ,        directory ^>= 1.3.8.1
               ,        fast-logger ^>= 3.2.1
               ,        filepath ^>= 1.4.100.0
               ,        format-numbers ^>= 0.1.0.1
               ,        haskeline ^>= 0.8.2
               ,        memory ^>= 0.18
               ,        microlens ^>= 0.4.13.1
               ,        persistent ^>= 2.14.4
               ,        persistent-sqlite ^>= 2.13.1
               ,        resource-pool ^>= 0.4.0.0
               ,        template-haskell ^>=
                        { 2.16.0.0, 2.17.0.0, 2.18.0.0, 2.19.0.0 }
               ,        terminal-size ^>= 0.3.3
               ,        transformers
               ,        unliftio-core ^>= 0.2.0.1
               ,        validated-literals ^>= 0.3.1
               ,        vector ^>= 0.13.0.0
               ,        vector-algorithms ^>= 0.9.0.1

  if impl(ghc == 8.10.*)
    Build-Depends:      megaparsec ^>= 9.2.1
                 --     megaparsec 9.2.2 and 9.3.0 dropped support for GHC 8.10
  else
    Build-Depends:      megaparsec ^>= 9.3.0

Executable Ingest
  Import:               all, exes
  Hs-Source-Dirs:       ingest-src
  Main-Is:              Main.hs
  Other-Modules:        Commands.Add
                        Commands.Import
                        Commands.List
                        Commands.Query
                        Commands.Reset
                        Commands.Set
                        Commands.Unset
                        Jobs
                        JobPool
                        Parsers
                        Query.Missing

  Other-Extensions:     DeriveFoldable
                        DeriveFunctor
                        DeriveTraversable
                        ScopedTypeVariables
                        TypeFamilies

  Build-Depends:        benchmark-analysis
               ,        broadcast-chan-conduit ^>= 0.2.1.2
               ,        attoparsec ^>= 0.14.4
               ,        cryptonite-conduit ^>= 0.2.2
               ,        directory ^>= 1.3.8.1
               ,        filepath ^>= 1.4.100.0
               ,        hostname ^>= 1.0
               ,        memory ^>= 0.18
               ,        process ^>= 1.6.16.0
               ,        resource-pool ^>= 0.4.0.0
               ,        stm ^>= 2.5.1.0
               ,        transformers

Executable Model
  Import:               all, exes
  Hs-Source-Dirs:       model-src
  Main-Is:              Main.hs
  Other-Modules:        Evaluate
                        ModelOptions
                        PredictorResults
                        Train
                        Validate
                        Query.Dump

  Other-Extensions:     BangPatterns
                        DeriveFunctor
                        FlexibleContexts
                        ScopedTypeVariables
                        TypeFamilies

  Build-Depends:        benchmark-analysis
               ,        binary ^>= 0.8.9.1
               ,        binary-conduit ^>= 1.3.1
               ,        data-interval ^>= 2.1.1
               ,        validated-literals ^>= 0.3.1
               ,        vector ^>= 0.13.0.0
               ,        vector-algorithms ^>= 0.9.0.1

  if impl(ghc == 8.10.*)
    Build-Depends:      megaparsec ^>= 9.2.1
                --      megaparsec 9.2.2 and 9.3.0 dropped support for GHC 8.10
  else
    Build-Depends:      megaparsec ^>= 9.3.0

Executable Plot
  Import:               all, exes
  Default-Language:     Haskell2010
  Hs-Source-Dirs:       plot-src
  Main-Is:              Main.hs
  Other-Modules:        BarPlot
                        GlobalPlotOptions
                        Heatmap
                        Interesting
                        PlotOptions
                        Query.Dump
                        Query.Level
                        Query.StepHeatmap
                        Query.Time

  Other-Extensions:     BangPatterns
                        DeriveFoldable
                        DeriveGeneric
                        DerivingVia
                        FlexibleContexts

  Build-Depends:        benchmark-analysis
               ,        binary ^>= 0.8.9.1
               ,        data-interval ^>= 2.1.1
               ,        semigroups ^>= 0.20
               ,        statistics ^>= 0.16.1.2
               ,        vector ^>= 0.13.0.0

Source-Repository head
  Type:     git
  Location: git+ssh://github.com:merijn/Belewitte
